# SciGA

./: .gitignore  .gitmodules  README.md  demo.ipynb  index.html  pyproject.toml
benchmark/datasets/: __init__.py  dataset.py  experiments_data_loader.py
benchmark/experiments/: train_inter_with_abs2cap.py  train_inter_with_abs2fig.py  train_inter_with_random.py  train_intra_with_abs2cap.py  train_intra_with_abs2fig.py  train_intra_with_ga_bc.py
benchmark/metrics/: __init__.py  metric_for_inter.py  metric_for_intra.py
benchmark/model_configs/: x2vlm_large_4m_for_SciGA.yaml
benchmark/models/: base.py  classifier.py  classifier_loader.py  matcher.py  matcher_loader.py  retriever.py  retriever_loader.py
benchmark/scripts/: run_inter_with_abs2cap.sh  run_inter_with_abs2fig.sh  run_inter_with_random.sh  run_intra_with_abs2cap.sh  run_intra_with_abs2fig.sh  run_intra_with_ga_bc.sh
benchmark/submodules/patches/: x2vlm.patch
benchmark/utils/: utils.py
car/: pyproject.toml
car/car/: __init__.py  car.py
static/css/: index.css
